kubernetes/bootstrap/infra/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
   traefik.ingress.kubernetes.io/router.entrypoints: websecure
   cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - argocd.sulemannav.com
    secretName: argocd-tls
  rules:
  - host: argocd.sulemannav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
