kubernetes/bootstrap/infra/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
   traefik.ingress.kubernetes.io/router.entrypoints: websecure
   traefik.ingress.kubernetes.io/router.tls: "true"
   cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - grafana.sulemannav.com
    secretName: grafana-tls
  rules:
  - host: grafana.sulemannav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
