kubernetes/bootstrap/infra/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
   traefik.ingress.kubernetes.io/router.entrypoints: websecure
   traefik.ingress.kubernetes.io/router.tls: "true"
   cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prometheus.sulemannav.com
    secretName: prometheus-tls
  rules:
  - host: prometheus.sulemannav.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
